# api_gateway/api/docs/swagger.json
@@ -353,7 +353,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Post"
                 ],
                 "summary": "search users by name",
                 "parameters": [
@@ -773,7 +773,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UserRequest"
+                            "$ref": "#/definitions/models.UserRegister"
                         }
                     }
                 ],
@@ -1104,9 +1104,12 @@
                 }
             }
         },
-        "models.UserRequest": {
+        "models.UserRegister": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -1114,6 +1117,12 @@
                     "type": "string"
                 },
                 "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "user_type": {
                     "type": "string"
                 }
             }
